2023-10-25  Andreas Scherer  <https://ascherer.github.io>

	* weave.ch: Fine print for command-line options.

2023-10-21  Andreas Scherer  <https://ascherer.github.io>

	* tangleboot.pin,
	* tangle.ch,
	* weav-twill.ch,
	* weave.ch: 'current_option' runs from '0..n_options'.

2023-10-13  Andreas Scherer  <https://ascherer.github.io>

	* help.h,
	* weav-twill.ch,
	* weave.ch: Add option '-p' to '\input pwebmac'.

2023-10-09  Karl Berry  <karl@freefriends.org>

	* lib/texmfmp.c (parse_options): if --output-directory was
	specified, putenv the value to TEXMF_OUTPUT_DIRECTORY.
	If --output-directory was not specified, and
	TEXMF_OUTPUT_DIRECTORY is set in the environment (not config file),
	set the output_directory variable to its value.
	* tests/outputdir.test: new test.
	* am/texmf.am (tex_tests): add it.
	* doc/web2c.texi (Output file location),
	* NEWS: document this.
	* bibtex.ch: mention failure to implement TEXMF_OUTPUT_DIRECTORY.

	* doc/web2c.texi (Shell escape commands): xref kpathsea doc
	on output paranoia.
	* tests/tex-closeout.test: tweak description.

2023-10-09  Karl Berry  <karl@freefriends.org>

	* cpascal.h: typo.

2023-09-24  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Avoid shadow variables.

2023-09-17  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {mftraptest,triptest,twill}.test:
	Make easier to test on Windows.

2023-09-04  Andreas Scherer  <https://ascherer.github.io>

	* tangle.ch: Fix typo as in weave.web.

2023-09-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {tangle,dvicopy,dvitype,gftodvi,gftopk,gftype,mft,
	patgen,pktogf,pktype,pltotf,pooltype,tftopl,vftovp,
	vptovf,weave}.test:
	Make easier to test on Windows.

2023-08-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {mftraptest,triptest}.test:
	Filter Web2C year in banner.
	* {mftraptest,triptest,bibtex}.test,
	tests/{bibtex-{auxinclude,bibauth,mem},tex-closeout}.test:
	Make easier to test on Windows.